KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service (#99)
* Resolved blocker issues

* Resolved blocker issues

* Resolved critical issues

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service

* KB-11768| BE| TECHDEBT| JUnit test cases to improve the code coverage for the cb-comment-service