@@ -61,9 +61,6 @@ import java.util.Map.Entry;
 @Slf4j
 public class EsUtilServiceImpl implements EsUtilService {
 
-    /*@Autowired
-    private RestHighLevelClient elasticsearchClient;*/
-    private final EsConfig esConfig;
     private final ElasticsearchClient elasticsearchClient;
     private  final RestHighLevelClient userESClient;
     private final Logger logger = LogManager.getLogger(getClass());
@@ -80,7 +77,6 @@ public class EsUtilServiceImpl implements EsUtilService {
     public EsUtilServiceImpl(@Qualifier("elasticsearchClient") ElasticsearchClient elasticsearchClient, EsConfig esConnection,
         @Qualifier("userESClient") RestHighLevelClient userESClient) {
         this.elasticsearchClient = elasticsearchClient;
-        this.esConfig = esConnection;
         this.userESClient = userESClient;
     }
 
@@ -175,7 +171,12 @@ public class EsUtilServiceImpl implements EsUtilService {
     public SearchResult searchDocuments(String esIndexName, SearchCriteria searchCriteria) {
         String searchString = searchCriteria.getSearchString();
         if (searchString != null && searchString.length() > cbServerProperties.getSearchStringMaxRegexLength()) {
-            throw new RuntimeException("The length of the search string exceeds the allowed maximum of " + cbServerProperties.getSearchStringMaxRegexLength() + " characters.");
+            throw new CustomException(
+                    "VALIDATION_ERROR",
+                    "The length of the search string exceeds the allowed maximum of "
+                            + cbServerProperties.getSearchStringMaxRegexLength() + " characters.",
+                    HttpStatus.BAD_REQUEST
+            );
         }
         SearchRequest.Builder searchRequestBuilder = buildSearchRequest(searchCriteria);
         if (searchRequestBuilder == null) {
@@ -368,7 +369,7 @@ public class EsUtilServiceImpl implements EsUtilService {
                         } else if (value instanceof ArrayList) {
                             List<FieldValue> termsList = ((ArrayList<String>) value).stream()
                                     .map(FieldValue::of)
-                                    .collect(Collectors.toList());
+                                    .toList();
                             boolQueryBuilder.must(Query.of(q -> q.terms(
                                     t -> t.field(field + Constants.KEYWORD)
                                             .terms(terms -> terms.value(termsList)))));
@@ -644,10 +645,10 @@ public class EsUtilServiceImpl implements EsUtilService {
         try {
             // Create a terms query to filter documents based on parentTopics
             Query termsQuery = Query.of(q -> q.terms(t -> t
-                .field(Constants.TOPIC_ID)
-                .terms(terms -> terms.value(parentTopics.stream()
-                    .map(FieldValue::of)
-                    .collect(Collectors.toList())))
+                    .field(Constants.TOPIC_ID)
+                    .terms(terms -> terms.value(parentTopics.stream()
+                            .map(FieldValue::of)
+                            .toList()))
             ));
 
             // Create the terms aggregation
@@ -747,7 +748,7 @@ public class EsUtilServiceImpl implements EsUtilService {
 
         } catch (ElasticsearchStatusException e) {
             if (e.status() == RestStatus.CONFLICT) {
-                logger.warn("Conflict detected, retrying attempt {} of {}", e);
+                logger.warn("Conflict detected, retrying", e);
             } else {
                 logger.error("Failed to upsert communityId for userId: {}", userId, e);
                 return false;
@@ -758,7 +759,7 @@ public class EsUtilServiceImpl implements EsUtilService {
         }
 
 
-        logger.error("Failed to upsert communityId for userId: {} after {} retries", userId);
+        logger.error("Failed to upsert communityId for userId: {} after retries", userId);
         return false;
     }
 
@@ -903,17 +904,6 @@ public class EsUtilServiceImpl implements EsUtilService {
     }
 
 
-    /**
-     * Helper method to process search hits and add them to the documents list.
-     */
-    private void processSearchHits(SearchResponse<Object> searchResponse, List<Map<String, Object>> documents) {
-        for (Hit<Object> hit : searchResponse.hits().hits()) {
-            if (hit.source() != null) {
-                JsonData source = (JsonData) hit.source();
-                documents.add(source.to(Map.class)); // Convert JsonData to Map
-            }
-        }
-    }
 
     public  Map<String, Object> readJsonSchema(String jsonFilePath) {
         if (schemaCache.containsKey(jsonFilePath)) {
@@ -921,7 +911,6 @@ public class EsUtilServiceImpl implements EsUtilService {
         }
 
         try (InputStream schemaStream = JsonSchemaFactory.getInstance().getClass().getResourceAsStream(jsonFilePath)) {
-            ObjectMapper objectMapper = new ObjectMapper();
             Map<String, Object> schemaMap = objectMapper.readValue(schemaStream, new TypeReference<Map<String, Object>>() {});
             schemaCache.put(jsonFilePath, schemaMap);
             return schemaMap;
